fix: need to scroll on mobile

--- a/src/assets/css/_breakpoint.scss
+++ b/src/assets/css/_breakpoint.scss
@@ -3,3 +3,9 @@
     @content;
   }
 }
+
+@mixin screen414 {
+  @media (max-width: 415px) {
+    @content;
+  }
+}
